; ModuleID = '/home/carl/AnghaBench/mongoose/test/ccgi-1.2/extr_ccgi.c_hex.c'
source_filename = "/home/carl/AnghaBench/mongoose/test/ccgi-1.2/extr_ccgi.c_hex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @hex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hex(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %16 [
    i32 48, label %5
    i32 49, label %5
    i32 50, label %5
    i32 51, label %5
    i32 52, label %5
    i32 53, label %5
    i32 54, label %5
    i32 55, label %5
    i32 56, label %5
    i32 57, label %5
    i32 65, label %8
    i32 66, label %8
    i32 67, label %8
    i32 68, label %8
    i32 69, label %8
    i32 70, label %8
    i32 97, label %12
    i32 98, label %12
    i32 99, label %12
    i32 100, label %12
    i32 101, label %12
    i32 102, label %12
  ]

5:                                                ; preds = %1, %1, %1, %1, %1, %1, %1, %1, %1, %1
  %6 = load i32, i32* %3, align 4
  %7 = sub nsw i32 %6, 48
  store i32 %7, i32* %2, align 4
  br label %17

8:                                                ; preds = %1, %1, %1, %1, %1, %1
  %9 = load i32, i32* %3, align 4
  %10 = add nsw i32 10, %9
  %11 = sub nsw i32 %10, 65
  store i32 %11, i32* %2, align 4
  br label %17

12:                                               ; preds = %1, %1, %1, %1, %1, %1
  %13 = load i32, i32* %3, align 4
  %14 = add nsw i32 10, %13
  %15 = sub nsw i32 %14, 97
  store i32 %15, i32* %2, align 4
  br label %17

16:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %17

17:                                               ; preds = %16, %12, %8, %5
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
